--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,10 @@
                 <testFailureIgnore>true</testFailureIgnore>
                 <forkCount>0</forkCount>
           <suiteXmlFiles>
-          <suiteXmlFile>Recent_Test.xml</suiteXmlFile>
+          <suiteXmlFile>Popbitch_Smoke_Tests_Live_Chrome_1.xml</suiteXmlFile>
+          <suiteXmlFile>Popbitch_Smoke_Tests_Live_Chrome_2.xml</suiteXmlFile>
+          <suiteXmlFile>Popbitch_SMoke_tests_Live_chrome_3.xml</suiteXmlFile>
+          <suiteXmlFile>popbitch_Smoke_tests_Live_Chrome_4.xml</suiteXmlFile>
          
           
   
